--- a/알고리즘 1일차.ipynb
+++ b/알고리즘 1일차.ipynb
@@ -1,8 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "434edb89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import font_manager, rc\n",
+    "font_name = font_manager.FontProperties(fname=\"c:/Windows/Fonts/malgun.ttf\").get_name()\n",
+    "rc('font', family=font_name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "71e57c09",
+   "id": "b8812e89",
    "metadata": {},
    "source": [
     "# ex01 (그리디 알고리즘)"
